# rv6

./: .gitignore  .travis.yml  Makefile  README-rv6.md  bench.py  count_unsafe.py  rust-gdb  rust-gdb.sh  rust-toolchain
.cargo/: config.toml
.github/workflows/: ci.yml
ci/: test.sh
kernel/: arch.h  arm.h  bio.c  console.c  entry.S  file.c  fs.c  fs.h  kernel.ld  log.c  main.c  param.h  proc.c  start.c  syscall.h  types.h  uart.c  virtio_disk.c  vm.c
kernel-rs/: Cargo.toml  aarch64-unknown-none.json  riscv64gc-unknown-none-elfhf.json
kernel-rs-lib/: Cargo.toml  riscv64gc-unknown-none-elfhf.json  rustfmt.toml
kernel-rs-lib/src/: lib.rs  lock.rs  pcb.rs  pinned_array.rs  remote_lock.rs
kernel-rs-lib/src/arena/: array_arena.rs  mod.rs  mru_arena.rs
kernel-rs/src/: abort.rs  addr.rs  arena.rs  bio.rs  buf.rs  console.rs  cpu.rs  elf.rs  etrace.rs  exec.rs  fcntl.rs  file.rs  fs.rs  hal.rs  interface.rs  intr.rs  kalloc.rs  kernel.rs  kernel_main.rs  lib.rs  list.rs  log.rs  main.rs  memlayout.rs  page.rs  panic.rs  param.rs  path.rs  pincell.rs  pinned_array.rs  pinned_kernel.rs  pipe.rs  plic.rs  pool.rs  poweroff.rs  printer.rs  printf.rs  proc.rs  rc_cell.rs  rcpool.rs  (+20 more)
kernel-rs/src/arch/: addr.rs  interface.rs  memlayout.rs  mod.rs  plic.rs  riscv.rs
kernel-rs/src/arch/arm/: addr.rs  arm.rs  asm.rs  cpu.rs  intr.rs  kernel.rs  memlayout.rs  mod.rs  plic.rs  poweroff.rs  proc.rs  procs.rs  start.rs  timer.rs  trap.rs  uart.rs  vm.rs
kernel-rs/src/arch/arm/intr/: gicv2.rs  gicv3.rs  mod.rs
kernel-rs/src/arch/riscv/: addr.rs  asm.rs  cpu.rs  intr.rs  kernel.rs  memlayout.rs  mod.rs  poweroff.rs  proc.rs  procs.rs  riscv.rs  start.rs  timer.rs  trap.rs  uart.rs  vm.rs
kernel-rs/src/arena/: array_arena.rs  mod.rs  mru_arena.rs
kernel-rs/src/ds/: list.rs
kernel-rs/src/fs/: inode.rs  lfs.rs  log.rs  mod.rs  path.rs  stat.rs  superblock.rs
kernel-rs/src/fs/journal/: inode.rs  log.rs  mod.rs
kernel-rs/src/fs/lfs/: checkpoint.rs  cleaner.rs  imap.rs  inode.rs  lfs.rs  log.rs  mod.rs  segment.rs  superblock.rs  tx.rs
kernel-rs/src/fs/ufs/: inode.rs  log.rs  mod.rs  superblock.rs
kernel-rs/src/lock/: lock_protected.rs  mod.rs  rawspinlock.rs  remotelock.rs  sleepablelock.rs  sleeplock.rs  spinlock.rs  spinlock_protected.rs
kernel-rs/src/proc/: kernel_ctx.rs  mod.rs  procs.rs  wait_channel.rs
kernel-rs/src/syscall/: file.rs  mod.rs  proc.rs
kernel-rs/src/util/: branded.rs  branded_list.rs  const_assert_generics.rs  intrusive_list.rs  list.rs  list2.rs  mod.rs  rc_cell.rs  shared_mut.rs  shared_rc_cell.rs  stack_rc.rs  static_arc.rs  strong_pin.rs
kernel-rs/src/utils/: mod.rs
kernel-rs/src/virtio/: mod.rs  virtio_disk.rs
kernel/arm/: entry.S  kernel.ld  swtch.S  trampoline.S  trap_asm.S
kernel/riscv/: swtch.S
lmbench/: Makefile  bench.h  bw_file_rd.c  bw_mem.c  bw_mmap_rd.c  bw_pipe.c  bw_tcp.c  bw_udp.c  bw_unix.c  cache.c  disk.c  enough.c  flushdisk.c  getopt.c  hello.c  lat_cmd.c  lat_connect.c  lat_ctx.c  lat_dram_page.c  lat_fcntl.c  lat_fifo.c  lat_fs.c  lat_http.c  lat_mem_rd.c  lat_mmap.c  lat_ops.c  lat_pagefault.c  lat_pipe.c  lat_pmake.c  lat_proc.c  lat_rand.c  lat_rpc.c  lat_select.c  lat_sem.c  lat_sig.c  lat_syscall.c  lat_tcp.c  lat_udp.c  lat_unix.c  lat_unix_connect.c  (+27 more)
mklfs/: lfs.h  mklfs.c
user/: grind.c  init.c  printf.c  rand.c  rand.h  sh.c  string.c  ulib.c  umalloc.c  user.h  usertests.c  usys.pl
user/arm/: initcode.S
