[package]
name = "rv6-kernel"
version = "0.1.0"
authors = ["Jeehoon Kang <jeehoon.kang@kaist.ac.kr>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
default = []
test = []

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = true

[dependencies]
array-macro = "2.1.0"
arrayvec = { version = "0.7.0", default-features = false }
bitflags = "1.2.1"
# TODO: use the crates.io version when <https://github.com/bodil/bitmaps/pull/11> is merged and
# published.
bitmaps = { git = "https://github.com/jeehoonkang/bitmaps.git", branch = "rv6", default-features = false }
const-zero = { git = "https://github.com/maxbla/const-zero.git" }
cstr_core = { version = "0.2.3", default-features = false }
itertools = { version = "0.10.0", default-features = false }
num-iter = { version = "0.1.42", default-features = false }
pin-project = "1.0.7"
scopeguard = { version = "1.1.0", default-features = false }
spin = "0.9.0"
static_assertions = "1.1.0"
zerocopy = "0.5.0"

# Compiler options for sysroot packages.
# Cargo currently warns following packages are not dependencies.
# This is a bug, those options actually work well.
[profile.dev.package.core]
opt-level = 3
debug-assertions = false
codegen-units = 16
overflow-checks = false

[profile.dev.package.compiler_builtins]
opt-level = 3
debug-assertions = false
codegen-units = 16
overflow-checks = false
