[package]
name = "rv6-kernel"
version = "0.1.0"
authors = ["Jeehoon Kang <jeehoon.kang@kaist.ac.kr>"]
edition = "2021"
autobins = false

[lib]
crate-type = ["staticlib"]

[features]
default = []
test = []
gicv2 = []
gicv3 = []
lfs = []

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = true

[dependencies]
array-macro = "2.1.3"
arrayvec = { version = "0.7.2", default-features = false }
bitflags = "1.3.2"
bitmaps = { version = "3.1.0", default-features = false }
cfg-if = "1.0.0"
const-zero = { git = "https://github.com/maxbla/const-zero.git" }
cstr_core = { version = "0.2.5", default-features = false }
itertools = { version = "0.10.3", default-features = false }
num-iter = { version = "0.1.42", default-features = false }
pin-project = "1.0.10"
scopeguard = { version = "1.1.0", default-features = false }
spin = "0.9.3"
static_assertions = "1.1.0"
zerocopy = "0.6.1"

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "7.2.0"
tock-registers = { version = "0.7.0", default-features = false, features = ["register_types"] }

# Compiler options for sysroot packages.
# Cargo currently warns following packages are not dependencies.
# This is a bug, those options actually work well.
[profile.dev.package.core]
opt-level = 3
debug-assertions = false
codegen-units = 16
overflow-checks = false

[profile.dev.package.compiler_builtins]
opt-level = 3
debug-assertions = false
codegen-units = 16
overflow-checks = false
